--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux": "^3.6.0",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
