--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux": "^3.6.0",
     "axios": "^0.26.1",
     "dayjs": "^1.11.5",
+    "peerjs": "^1.4.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
